# libcst-mypy

./: .cruft.json  README.md  pyproject.toml
.github/workflows/: main.yml
libcst_mypy/: __init__.py  provider.py  utils.py
tests/: test_inferencer.py
tests/data/: simples_class.json
